force-app/main/default/objects/My_B2B_Shop_Preference__c/My_B2B_Shop_Preference__c.object-meta.xml
<CustomObject>
    <label>My B2B Shop Preference</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>My B2B Shop Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My B2B Shop Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>