force-app/main/default/objects/My_B2B_Shop_Preference__c/fields/B2B_Account__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>My B2B Shop Preferences</relationshipLabel>
    <relationshipName>My_B2B_Shop_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>