force-app/main/default/objects/My_B2B_Shop_Preference__c/fields/B2B_Hide_Account_Closure_Popup__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hide_Account_Closure_Popup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field which control if the user wants to see the Account Closure Popup or not</description>
    <label>Hide Account Closure Popup</label>
    <type>Checkbox</type>
</CustomField>