force-app/main/default/objects/My_B2B_Shop_Preference__c/fields/B2B_Show_RRP__c.field-meta.xml
<CustomField>
    <fullName>B2B_Show_RRP__c</fullName>
    <defaultValue>true</defaultValue>
    <label>B2B Show RRP</label>
    <type>Checkbox</type>
</CustomField>